--- a/languages/languages.json
+++ b/languages/languages.json
@@ -20,7 +20,8 @@
     "error_rss_add_failed": "Failed to add the RSS feed. Please try again.",
     "cancel_rss_add": "RSS feed addition has been canceled.",
     "rss_already_exists": "The RSS feed is already registered.",
-    "rss_max_limit": "You can only register up to {MAX_RSS_FEEDS} RSS feeds."
+    "rss_max_limit": "You can only register up to {MAX_RSS_FEEDS} RSS feeds.",
+    "invalid_rss_url": "Invalid RSS URL. Please enter a valid URL."
   },
   "ko": {
     "welcome_message": "RSS 봇에 오신 것을 환영합니다!",
@@ -43,6 +44,7 @@
     "error_rss_add_failed": "RSS 피드 추가에 실패했습니다. 다시 시도해 주세요.",
     "cancel_rss_add": "RSS 피드 추가가 취소되었습니다.",
     "rss_already_exists": "이미 등록된 RSS 피드입니다.",
-    "rss_max_limit": "최대 {MAX_RSS_FEEDS}개의 RSS 피드만 등록할 수 있습니다."
+    "rss_max_limit": "최대 {MAX_RSS_FEEDS}개의 RSS 피드만 등록할 수 있습니다.",
+    "invalid_rss_url": "유효하지 않은 RSS URL입니다. 올바른 URL을 입력해 주세요."
   }
 }
