--- a/languages/languages.json
+++ b/languages/languages.json
@@ -31,7 +31,16 @@
     "error_fetching_rss_feeds": "RSS feed list retrieval error occurred",
     "registered_rss_feed_list": "Registered RSS Feed List",
     "no_update_information": "No Update Information",
-    "last_updated": "Last Updated"
+    "last_updated": "Last Updated",
+    "no_rss_to_delete": "No RSS feeds available for deletion.",
+    "select_rss_to_delete": "Please select the RSS feed to delete.",
+    "confirm_yes": "Yes",
+    "confirm_no": "No",
+    "confirm_delete_rss": "Do you want to delete this RSS feed?",
+    "rss_deleted_success": "RSS feed has been deleted.",
+    "rss_deleted_confirm": "RSS feed was successfully deleted.",
+    "delete_canceled": "Deletion has been canceled.",
+    "delete_operation_canceled": "The delete operation has been canceled."
   },
   "ko": {
     "welcome_message": "RSS 봇에 오신 것을 환영합니다!",
@@ -65,6 +74,15 @@
     "error_fetching_rss_feeds": "RSS 피드 목록을 불러오는 중 오류 발생",
     "registered_rss_feed_list": "등록된 RSS 피드 목록",
     "no_update_information": "업데이트 정보 없음",
-    "last_updated": "마지막 업데이트"
+    "last_updated": "마지막 업데이트",
+    "no_rss_to_delete": "삭제할 RSS 피드가 없습니다.",
+    "select_rss_to_delete": "삭제할 RSS 피드를 선택하세요",
+    "confirm_yes": "예",
+    "confirm_no": "아니오",
+    "confirm_delete_rss": "이 RSS를 삭제하시겠습니까?",
+    "rss_deleted_success": "RSS 피드를 삭제했습니다.",
+    "rss_deleted_confirm": "RSS 피드가 삭제되었습니다.",
+    "delete_canceled": "삭제 작업이 취소되었습니다.",
+    "delete_operation_canceled": "삭제 작업을 취소했습니다"
   }
 }
