--- a/languages/languages.json
+++ b/languages/languages.json
@@ -40,7 +40,12 @@
     "rss_deleted_success": "RSS feed has been deleted.",
     "rss_deleted_confirm": "RSS feed was successfully deleted.",
     "delete_canceled": "Deletion has been canceled.",
-    "delete_operation_canceled": "The delete operation has been canceled."
+    "delete_operation_canceled": "The delete operation has been canceled.",
+    "user_not_found_to_delete": "No account found to delete.",
+    "confirm_delete_user": "Are you sure you want to delete your account?",
+    "invalid_user_action": "You do not have permission to perform this action.",
+    "user_deleted": "Your account has been successfully deleted.",
+    "cancel_delete_user": "Account deletion has been canceled."
   },
   "ko": {
     "welcome_message": "RSS 봇에 오신 것을 환영합니다!",
@@ -83,6 +88,11 @@
     "rss_deleted_success": "RSS 피드를 삭제했습니다.",
     "rss_deleted_confirm": "RSS 피드가 삭제되었습니다.",
     "delete_canceled": "삭제 작업이 취소되었습니다.",
-    "delete_operation_canceled": "삭제 작업을 취소했습니다"
+    "delete_operation_canceled": "삭제 작업을 취소했습니다",
+    "user_not_found_to_delete": "삭제할 계정을 찾을 수 없습니다.",
+    "confirm_delete_user": "정말로 계정을 삭제하시겠습니까?",
+    "invalid_user_action": "이 작업을 수행할 권한이 없습니다.",
+    "user_deleted": "계정이 성공적으로 삭제되었습니다.",
+    "cancel_delete_user": "계정 삭제가 취소되었습니다."
   }
 }
